--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.2"
   }
 }
